--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                                         <strong>Desarrollo rápido de aplicaciones (DRA):</strong><br>
                                          <img src="luis graduacion/Grafica8.png" width="600" heigth="600" alt=""><br>
                                         <strong>Definición:</strong><br>
-                                        	Las limitaciones de tiempo impuestas en un proyecto DRA demandan ámbito en escalas.                     
+                                        	Las limitaciones de tiempo impuestas en un proyecto (DRA) demandan ámbito en escalas.                     
                                         	- Es un modelo de proceso del ciclo de vida clásico que enfatiza un ciclo de vida de desarrollo extremadamente corto.<br>
                                         	- El modelo DRA es una adaptación a alta velocidad del ciclo de
                                           vida clásico en el que se logra el desarrollo rápido utilizando un enfoque de construcción basado en componentes. Si se comprenden bien los requisitos y se limita el ámbito del proyecto, el proceso DRA permite al equipo de desarrollo crear un sistema completamente funcional dentro de períodos cortos de tiempo.<br>
