--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                <h1>Material de clases</h1><br>		
                                 <br>
 				<body id="page-top">
-<section class="team contenedor" id="inicio">
+<section class="team contenedor" id="U1">
                                     <h1>Unidad#1</h1><br>
                                      <p>
                                         <h2>Fundamentos a la Ingeniería de Software </h2><br>
