--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                             <span></span>
                         </div>
                                <ul>
-                            <li class="btn-header"><a href="#" id="enlace-inicio">¿Quién es Luis Vera?</a></li>
-                            <li><a href="#" id="enlace-comp" >Competencias</a></li>
-                            <li><a href="#" id="enlace-U1" >Unidad#1</a></li>
-			 <li><a href="#" id="enlace-U1" >Unidad#2</a></li>
+                            <li class="btn-header"><a href="#" id="enlace-inicio" class="btn-header">¿Quién es Luis Vera?</a></li>
+                            <li><a href="#" id="enlace-comp" class="btn-header" >Competencias</a></li>
+                            <li><a href="#" id="enlace-U1" class="btn-header" >Unidad#1</a></li>
+			 <li><a href="#" id="enlace-U1" class="btn-header" >Unidad#2</a></li>
                                 </ul>
                             </li> 
 			    	
