--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
                         <div class="projectDetais">
                             <h2 class="proDetaTitle">¿Quién es Luis Vera?</h2>
                             <p>   
-                             Soy Luis Vera tengo 18 años soy originario de la ciudad de Guayaquil y actualmente me encuentro cursando la carrera de Ing. en Software
-                            en la Universidad de Guayaquil
+                             Soy Luis Vera tengo 18 años y actualmente me encuentro cursando la carrera de Ing. en Software en la Universidad de Guayaquil, soy originario de la ciudad de Guayaquil aunque mis padres son originarios del cantón  Yaguachi.
+Me considero una persona muy amigable y tranquila, aunque esto no se debe de confundir con ser alguien de caracter debil, disfruto mucho de pasar con mis seres queridos en especial con mis padres, hermanos y amigos cercanos.
+Disfruto de tener multiples pasatiempos, aunque debido a esto suelo cambiarlos muy rapido, entre mis pasatiempos actulales favoritos se encuentran los videojuegos y la resolucion de puzzles en especial los tridimencionales como lo pueden ser los cubos de Rubick.
+Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan de los clásicos en especial del rock ya que es de mis generos musicales favoritos junto con el Metal y el Jazz.
                             </p>
                             <p>
                          </section>  
