--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-xs-12 text-center breadsec">
                         <h1 class="breadTitle">Luis Vera</h1>
                         <div class="breadCumpNav">
-                            <a href="index.html">Home</a>
+                            <a href="#" id="enlace-U1" class="btn-header">Home</a>
                             <i class="fa fa-angle-right"></i>
                             <a href="#¿Quién es Luis Vera?">¿Quién soy?</a>
                         </div>
