--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                 <p>Html: Amateur </p> 
                                 <h3>Introducción a la Ingenieria en Software </h3>
                             <br>
-                                <p>Docente : Ing. Miguel Angel Botto Tobar</p>
+                                <p>Docente : Ing. Miguel Angel Botto Tobar</p><br>
                                <h2>Material de clases</h2><br>		
                                 <br>
 				<body id="page-top">
