--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         <div class="breadCumpNav">
                             <a href="#" id="enlace-U1" class="btn-header">Home</a>
                             <i class="fa fa-angle-right"></i>
+				<section class="team contenedor" id="inicio">
                             <a href="#¿Quién es Luis Vera?">¿Quién soy?</a>
                         </div>
                     </div>
