--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                             <span></span>
                             <span></span>
                         </div>
-                      
+			    <a href="enlace-" id="#itsme" class="btn-header">¿Quién es Luis Vera?</a>
+			    <a href="" id="#" class="btn-header">Unidad#1</a>
+			    <a href="" id="#" class="btn-header">Unidad#2</a>
                     </nav>
                 </div>
 
@@ -87,7 +89,7 @@
                         <div class="breadCumpNav">
                             <a href="#" id="enlace-U1" class="btn-header">Home</a>
                             <i class="fa fa-angle-right"></i>
-				<section class="team contenedor" id="inicio">
+				<section class="team contenedor" id="itsme">
                             <a href="#¿Quién es Luis Vera?">¿Quién soy?</a>
                         </div>
                     </div>
