--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <span></span>
                             <span></span>
                         </div>
-			    <a href="enlace-" id="#itsme" class="btn-header">¿Quién es Luis Vera?</a>
+			    <a href="enlace-itsme" id="#" class="btn-header">¿Quién es Luis Vera?</a>
 			    <a href="" id="#" class="btn-header">Unidad#1</a>
 			    <a href="" id="#" class="btn-header">Unidad#2</a>
                     </nav>
