--- a/index.html
+++ b/index.html
@@ -69,9 +69,14 @@
                             <span></span>
                             <span></span>
                         </div>
-			    <a href="enlace-itsme" id="#" class="btn-header">¿Quién es Luis Vera?</a>
-			    <a href="" id="#" class="btn-header">Unidad#1</a>
-			    <a href="" id="#" class="btn-header">Unidad#2</a>
+			   <ul>
+                            <li class="btn-header"><a href="#inicio" id="enlace-inicio">¿Quién es Luis Vera?</a></li>
+                            <li><a href="#" id="enlace-comp" class="btn-header" >Competencias</a></li>
+                            <li><a href="#" id="enlace-U1" class="btn-header" >Unidad#1</a></li>
+			 <li><a href="#" id="enlace-U1" class="btn-header" >Unidad#2</a></li>
+                                </ul>
+                            </li> 
+                        </ul>
                     </nav>
                 </div>
 
