--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <span></span>
                         </div>
 			   <ul>
-                            <li class="btn-header"><a href="#inicio" id="enlace-inicio">¿Quién es Luis Vera?</a></li>
+                            <li><a href="#" id="enlace-inicio">¿Quién es Luis Vera?</a></li>
                             <li><a href="#" id="enlace-comp" class="btn-header" >Competencias</a></li>
                             <li><a href="#" id="enlace-U1" class="btn-header" >Unidad#1</a></li>
 			 <li><a href="#" id="enlace-U1" class="btn-header" >Unidad#2</a></li>
@@ -147,7 +147,7 @@
                                 </a>
                             </div>
                         </div>
-			<section id="about">
+			<section id="enlace-inicio">
                         <div class="projectDetais">
                             <h2 class="proDetaTitle">¿Quién es Luis Vera?</h2>
                             <p>   
