--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                             <span></span>
                         </div>
 			   <ul>
-                            <li><a href="#" id="enlace-inicio">¿Quién es Luis Vera?</a></li>
-                            <li><a href="#" id="enlace-comp" class="btn-header" >Competencias</a></li>
-                            <li><a href="#" id="enlace-U1" class="btn-header" >Unidad#1</a></li>
-			 <li><a href="#" id="enlace-U1" class="btn-header" >Unidad#2</a></li>
+                            <li><a href="#p" >¿Quién es Luis Vera?</a></li>
+                            <li><a href="#q" >Competencias</a></li>
+                            <li><a href="#r"  >Unidad#1</a></li>
+			 <li><a href="#s" >Unidad#2</a></li>
                                 </ul>
                             </li> 
                         </ul>
@@ -147,9 +147,9 @@
                                 </a>
                             </div>
                         </div>
-			<section id="enlace-inicio">
+			
                         <div class="projectDetais">
-                            <h2 class="proDetaTitle">¿Quién es Luis Vera?</h2>
+                            <a name="p"><h2 class="proDetaTitle">¿Quién es Luis Vera?</h2></a>
                             <p>   
                              Soy Luis Vera tengo 18 años y actualmente me encuentro cursando la carrera de Ing. en Software en la Universidad de Guayaquil, soy originario de la ciudad de Guayaquil aunque mis padres son originarios del cantón  Yaguachi.
 Me considero una persona muy amigable y tranquila, aunque esto no se debe de confundir con ser alguien de caracter debil, disfruto mucho de pasar con mis seres queridos en especial con mis padres, hermanos y amigos cercanos.
