--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                 y es la primera ocación en la que estoy desarrollando software
                             </p>
                             <p>
-                                <h2>Competencias</h2>
+                                <a name="q"><h2>Competencias</h2></a>
                             <br>
                                 <p>Lenguaje C : Básico </p>
                                 <p>Html: Amateur </p> 
@@ -176,7 +176,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                 <br>
 				<body id="page-top">
 <section class="team contenedor" id="U1">
-                                    <h2>Unidad#1</h2><br>
+                                    <a name="r"><h2>Unidad#1</h2><br></a>
                                      <p>
                                         <h2>Fundamentos a la Ingeniería de Software </h2><br>
                                         <p> Definición de IS
@@ -343,7 +343,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
 
                                      </p>
                                 <br>
-                                    <h1>Unidad#2</h1>
+                                    <a name="s"><h1>Unidad#2</h1></a>
                                     <p>
                                         <br>
                                         <h1>El proceso de SW</h1><br>
