--- a/index.html
+++ b/index.html
@@ -150,36 +150,36 @@
 			
                         <div class="projectDetais">
                             <a name="p"><h2 class="proDetaTitle">¿Quién es Luis Vera?</h2></a>
-                            <p>   
+                            <p style="text-alig:justify;">   
                              Soy Luis Vera tengo 18 años y actualmente me encuentro cursando la carrera de Ing. en Software en la Universidad de Guayaquil, soy originario de la ciudad de Guayaquil aunque mis padres son originarios del cantón  Yaguachi.
 Me considero una persona muy amigable y tranquila, aunque esto no se debe de confundir con ser alguien de caracter debil, disfruto mucho de pasar con mis seres queridos en especial con mis padres, hermanos y amigos cercanos.
 Disfruto de tener multiples pasatiempos, aunque debido a esto suelo cambiarlos muy rapido, entre mis pasatiempos actulales favoritos se encuentran los videojuegos y la resolucion de puzzles en especial los tridimencionales como lo pueden ser los cubos de Rubick.
 Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan de los clásicos en especial del rock ya que es de mis generos musicales favoritos junto con el Metal y el Jazz.
                             </p>
-                            <p>
+                            <p style="text-alig:justify;">
                          </section>  
 								
                             </p>
-                            <p>
+                            < style="text-alig:justify;"p>
                                 Mi experiencia en el mundo de la progracion es muy reduciada debido a que me gradue con un bachillerato en ciencias naturales 
                                 y es la primera ocación en la que estoy desarrollando software
                             </p>
-                            <p>
+                            <p style="text-alig:justify;">
                                 <a name="q"><h2>Competencias</h2></a>
                             <br>
-                                <p>Lenguaje C : Básico </p>
-                                <p>Html: Amateur </p> 
+                                <p style="text-alig:justify;">Lenguaje C : Básico </p>
+                                <p style="text-alig:justify;">Html: Amateur </p> 
                                 <h3>Introducción a la Ingenieria en Software </h3>
                             <br>
-                                <p>Docente : Ing. Miguel Angel Botto Tobar</p><br>
+                                <p style="text-alig:justify;">Docente : Ing. Miguel Angel Botto Tobar</p><br>
                                <h2>Material de clases</h2><br>		
                                 <br>
 				<body id="page-top">
 <section class="team contenedor" id="U1">
                                     <a name="r"><h2>Unidad#1</h2><br></a>
-                                     <p>
+                                     <p style="text-alig:justify;">
                                         <h2>Fundamentos a la Ingeniería de Software </h2><br>
-                                        <p> Definición de IS
+                                        <p style="text-alig:justify;"> Definición de IS
                                             Fritz Bauer, 1969:<br>
                                             Más que una disciplina o una parte del conocimiento, la Ingeniería es un verbo, una palabra de acción, un modo de enfocar el problema. 
                                             La Ingeniería del Software es el establecimiento y uso de principios robustos de la ingeniería a fin de obtener económicamente software que sea fiable y que funcione eficientemente sobre maquinas reales. <br>
@@ -195,7 +195,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                                 <p>La ingeniería de software es una aplicación práctica del conocimiento científico para proveer metodologías y técnicas que ayuden a desarrollar sistemas de software a tiempo, y a su vez que aseguren que el desarrollador cumpla con las expectativas de calidad y permanezca dentro del presupuesto.</p>
                                             </p>
                                             <h2>Objetivos de la IS</h2><br>                                            
-                                            <p>                                            
+                                            <p style="text-alig:justify;">                                            
                                                 Diseñar programas informáticos que se adecúen a las exigencias de la sociedad.<br>
                                                 Liderar y acoplar el desarrollo de programaciones complicadas.<br>
                                                 Actuar en todas las fases del ciclo de vida de un producto.<br>
@@ -208,7 +208,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                                 Incluir  procesos de calidad en los sistemas, calculando métricas e indicadores y chequeando la calidad del software producido.<br>
                                                 </p>   
                                                 <h2>Origen de IS</h2><br>
-                                                <p> <strong>Ingeniería del Software</strong> <br>
+                                                <p style="text-alig:justify;"> <strong>Ingeniería del Software</strong> <br>
                                                     Es el término utilizado por Fritz Bauer en la primera conferencia sobre desarrollo de software patrocinada por el Comité de Ciencia de la OTAN celebrada en Garmisch (Alemania), en octubre de 1968, previamente había sido utilizado por el holandés Edsger Dijkstra en su obra The Humble Programmer.<br>
                                                     Puede definirse según Alan Davis como "la aplicación inteligente de principios probados, técnicas, lenguajes y herramientas para la creación y mantenimiento, dentro de un coste razonable, de software que satisfaga las necesidades de los usuarios". <br>                                                  
                                                     Su origen se debió a que el entorno de desarrollo de sistemas software adolecía de:<br>
@@ -344,7 +344,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                      </p>
                                 <br>
                                     <a name="s"><h1>Unidad#2</h1></a>
-                                    <p>
+                                    <p style="text-alig:justify;">
                                         <br>
                                         <h1>El proceso de SW</h1><br>
                                         Un conjunto estructurado de actividades necesarias para desarrollar un sistema de software.<br>
@@ -644,7 +644,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                         </div>
                         <div class="projectSingleText">
                             <h2 class="projectSininTitle two">Detalles del Proyecto</h2>
-                            <p>
+                            <p style="text-alig:justify;">
                                 Este es un proyecto de final de parcial de la asignatura de "Introduccion a la ingenieria en Software", el cual
                                 tiene como finalidad que los estudiantes nos familiaricemos con los diversos entornos de desarrollo de sitios webs 
                                 y de esta manera crecer como futuros programadores que seremos. 
