--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 </a>
                             </div>
                         </div>
-			
+			<br>
                         <div class="projectDetais">
                             <a name="p"><h2 class="proDetaTitle">¿Quién es Luis Vera?</h2></a>
                             <p style="text-alig:justify;">   
@@ -164,6 +164,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                 Mi experiencia en el mundo de la progracion es muy reduciada debido a que me gradue con un bachillerato en ciencias naturales 
                                 y es la primera ocación en la que estoy desarrollando software
                             </p>
+				    <br>
                             <p style="text-alig:justify;">
                                 <a name="q"><h2>Competencias</h2></a>
                             <br>
@@ -175,7 +176,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                <h2>Material de clases</h2><br>		
                                 <br>
 				<body id="page-top">
-<section class="team contenedor" id="U1">
+<section class="team contenedor" id="U1"><br>
                                     <a name="r"><h2>Unidad#1</h2><br></a>
                                      <p style="text-alig:justify;">
                                         <h2>Fundamentos a la Ingeniería de Software </h2><br>
@@ -340,7 +341,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                                                     El software no se estropea, pero se <strong>deteriora</strong>. Durante su vida, el software sufre cambios <strong>(mantenimiento)</strong>. Conforme se hacen los cambios, es bastante probable que se introduzcan nuevos defectos, lo que hace que el software se vaya deteriorando debido a estos cambios. <br>         
                                                 </p>
 
-
+<br>
                                      </p>
                                 <br>
                                     <a name="s"><h1>Unidad#2</h1></a>
