--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                          </section>  
 								
                             </p>
-                            < style="text-alig:justify;"p>
+                            <p style="text-alig:justify;"p>
                                 Mi experiencia en el mundo de la progracion es muy reduciada debido a que me gradue con un bachillerato en ciencias naturales 
                                 y es la primera ocación en la que estoy desarrollando software
                             </p>
