--- a/index.html
+++ b/index.html
@@ -636,8 +636,8 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                         <div class="projectSingleInfo">
                             <h2 class="projectSininTitle">Información del Proyecto</h2>
                             <ul>
-                                <li><span>Create Date:</span> 20 de Diciembre </li>
-                                <li><span>Location:</span> Guayaquil, Ecuador</li>                             
+                                <li><span>Fecha:</span> 20 de Diciembre </li>
+                                <li><span>Ubicación:</span> Guayaquil, Ecuador</li>                             
                             </ul>
                         </div>
                         <div class="projectSingleText">
