--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ Al respecto de mis gustos musicales simpre he sido de las personas que disfrutan
                         <div class="projectSingleInfo">
                             <h2 class="projectSininTitle">Información del Proyecto</h2>
                             <ul>
-                                <li><span>Fecha:</span> 20 de Diciembre </li>
+                                <li><span>Fecha de creación:</span> 20 de Diciembre </li>
                                 <li><span>Ubicación:</span> Guayaquil, Ecuador</li>                             
                             </ul>
                         </div>
